--- a/Takigyo.cfg
+++ b/Takigyo.cfg
@@ -2,8 +2,8 @@
   <PublishDirectory Value="Resources/res" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
-  <SolutionSize Value="768 * 1024" />
-  <ResolutionName Value="iPad" />
+  <SolutionSize Value="640 * 960" />
+  <ResolutionName Value="Default" />
   <DefaultSerializer Value="Serializer_FlatBuffers" />
   <CustomSerializer Value="Serializer_FlatBuffers" />
   <IsNameStandardized Value="False" />
