--- a/Takigyo.cfg
+++ b/Takigyo.cfg
@@ -1,5 +1,5 @@
-<SolutionConfig Version="2.3.2.0">
-  <PublishDirectory Value="Resources/res/" />
+<SolutionConfig Version="2.3.1.2">
+  <PublishDirectory Value="Resources/res" />
   <PackageDirectory Value="package/" />
   <PublishType Value="Reference" />
   <SolutionSize Value="640 * 960" />
@@ -12,8 +12,8 @@
       <Value ctype="CocosProperties">
         <SolutionCodeType Value="Complete" />
         <ProgramLanguage Value="cpp" />
-        <CreateFrameworkVersion Value="cocos2d-x-3.7" />
-        <CurrentFrameworkVersion Value="cocos2d-x-3.7" />
+        <CreateFrameworkVersion Value="cocos2d-x-3.6" />
+        <CurrentFrameworkVersion Value="cocos2d-x-3.6" />
       </Value>
     </Item>
   </CustomProperties>
